--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Projeto criando um CRUD com Qualidade",
   "main": "index.js",
   "scripts": {
-    "start": "node ./core/crud.js",
-    "dev": "nodemon ./core/crud.js",
+    "start:crud": "npx ts-node ./core/crud.ts",
+    "dev:crud": "nodemon --ext ts,tsx --exec 'npm run start:crud'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "arg": "^5.0.2",
+    "typescript": "^5.3.3"
   }
 }
