--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.3"
   },
   "dependencies": {
     "arg": "^5.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   }
 }
