--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start:crud": "npx ts-node ./core/crud.ts",
     "dev:crud": "nodemon --ext ts,tsx --exec 'npm run start:crud'",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,11 +17,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@types/react": "18.2.48",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.3"
   },
   "dependencies": {
     "arg": "^5.0.2",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   }
