#A3.4 + A4.1 --> ESLint, Prettier, EditorConfig + Protocolo HTTP Integrando do Back ao Front com Controllers

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint ./**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,7 +20,16 @@
     "@types/node": "^20.11.5",
     "@types/react": "18.2.48",
     "@types/uuid": "^9.0.7",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.7"
   },
   "dependencies": {
     "arg": "^5.0.2",
