--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/node": "^20.11.5",
     "@types/react": "18.2.48",
     "@types/uuid": "^9.0.7",
-    "nodemon": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
@@ -29,6 +28,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "nodemon": "^3.0.3",
     "prettier": "^2.8.7"
   },
   "dependencies": {
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
